changing coment in index2 in master-copy

--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,8 @@
     />
     <style>
       /**
-             * !this is alert comment
+             * !this is alert comment 
+             * !This is a check comment for version control
              * ? this is question comment
              * TODO: This is a todo comment
              * *this is normal comment
