--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       let registration;
 
       const registerServiceWorker = async () => {
-        registration = await navigator.serviceWorker.register('./service-worker.js');
+        registration = await navigator.serviceWorker.register('service-worker.js');
       };
 
       registerServiceWorker();
