--- a/index.html
+++ b/index.html
@@ -15,28 +15,26 @@
       crossorigin="anonymous"
     />
     <!--fontawesome-->
-    <link
-      rel="stylesheet"
-      href="style.css"
-    />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>Pulkits TODOs List</title>
     <script>
-      if('serviceWorker' in navigator) {
-      let registration;
+      if ("serviceWorker" in navigator) {
+        let registration;
 
-      const registerServiceWorker = async () => {
-        registration = await navigator.serviceWorker.register('service-worker.js');
-      };
+        const registerServiceWorker = async () => {
+          registration = await navigator.serviceWorker.register(
+            "./service-worker.js"
+          );
+        };
 
-      registerServiceWorker();
+        registerServiceWorker();
       }
     </script>
     <script src="service-worker.js"></script>
-    
   </head>
 
   <body>
@@ -114,7 +112,7 @@
     </nav>
 
     <div class="container my-8">
-      <h2 class="text-center top-heading">TODOs List</h2>
+      <h2 class="text-center top-heading">TODOs List:</h2>
 
       <div class="form-group" style="padding-top: 1rem">
         <label for="title">Title</label>
@@ -215,6 +213,7 @@
                   <th class="th" scope="col">Edit</th>
                   <th class="th" scope="col">Delete</th>
                   <th class="th" scope="col">Status</th>
+                  <th class="th" scope="col">Listen</th>
                 </tr>
               </thead>
               <tbody id="tableBody">
